middle of part 4

--- a/HW1/hw1.ipynb
+++ b/HW1/hw1.ipynb
@@ -218,6 +218,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fareMask = (titanic.fare == titanic.fare.min()) & (titanic.survived == True)\n",
+    "#TODO\n",
+    "len(titanic[fareMask].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2                           Allison, Miss. Helen Loraine\n",
+      "11     Astor, Mrs. John Jacob (Madeleine Talmadge Force)\n",
+      "55                             Carter, Miss. Lucile Polk\n",
+      "92             Dick, Mrs. Albert Adrian (Vera Gillespie)\n",
+      "159                         Hippach, Miss. Jean Gertrude\n",
+      "187                            Lines, Miss. Mary Conover\n",
+      "193                    Madill, Miss. Georgette Alexandra\n",
+      "195                                Maioni, Miss. Roberta\n",
+      "198    Marvin, Mrs. Daniel Warner (Mary Graham Carmic...\n",
+      "229    Penasco y Castellana, Mrs. Victor de Satode (M...\n",
+      "250                           Ryerson, Miss. Emily Borie\n",
+      "270       Smith, Mrs. Lucien Philip (Mary Eloise Hughes)\n",
+      "289                                  Taussig, Miss. Ruth\n",
+      "Name: name, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(titanic[((titanic.sex == 'female') & (titanic.pclass == 1) & (titanic.age <= 18))].name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
