calling it good for hw5

--- a/HW5/HW5-solutions.ipynb
+++ b/HW5/HW5-solutions.ipynb
@@ -15,9 +15,7 @@
     " - [final training data](#final-training-data2)\n",
     " - [problem 2. summary](#p2-summary)\n",
     "- [problem 3.](#p3)\n",
-    " - [filtering training data](#filtering-training-data2)\n",
-    " - [final training data](#final-training-data2)\n",
-    " - [problem 2. summary](#p2-summary)\n",
+    "Note: I didn't attempt problem 3.\n",
     "\n",
     "## Problem 1. <a id=\"p1\"></a>\n",
     "\n",
